--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/express": "^5.0.0",
-		"@types/node": "^22.8.6",
+		"@types/jsonwebtoken": "^9.0.7",
+		"@types/node": "^22.9.0",
 		"nodemon": "^3.1.7",
 		"prisma": "^5.21.1",
 		"ts-node": "^10.9.2",
@@ -21,7 +23,9 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^5.21.1",
+		"bcrypt": "^5.1.1",
 		"codemon": "^0.1.31-development",
-		"express": "^4.21.1"
+		"express": "^4.21.1",
+		"jsonwebtoken": "^9.0.2"
 	}
 }
