--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
+		"@types/cookie-parser": "^1.4.7",
 		"@types/express": "^5.0.0",
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/node": "^22.9.0",
@@ -25,6 +26,7 @@
 		"@prisma/client": "^5.21.1",
 		"bcrypt": "^5.1.1",
 		"codemon": "^0.1.31-development",
+		"cookie-parser": "^1.4.7",
 		"express": "^4.21.1",
 		"jsonwebtoken": "^9.0.2"
 	}
