--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"codemon": "^0.1.31-development",
 		"cookie-parser": "^1.4.7",
 		"express": "^4.21.1",
+		"joi": "^17.13.3",
 		"jsonwebtoken": "^9.0.2"
 	}
 }
